Create basic UI

--- a/index.html
+++ b/index.html
@@ -5,16 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="materials/style.css">
+    <title>Augmentum</title>
 </head>
 
 <body>
 
     <canvas id="map"></canvas>
 
+    <div class="uiParent">
+        <div class="uiChild home">
+
+            <h2 class="uiHeader gameHeader">Augmentum</h2>
+
+            <div class="uiContent">
+
+                <button class="button greenButton" id="playButton">Play Game</button>
+                <a class="button purpleButton" tabindex="-1"><span class="material-icons-outlined">
+                    favorite_border
+                    </span>Donate</a>
+
+            </div>
+        </div>
+    </div>
+
     <!-- JS imports -->
     <!-- General -->
 
+    <script src="materials/script.js"></script>
     <script src="materials/index.js"></script>
     <script src="materials/env.js"></script>
 
