Added canvas creation and neural net

--- a/index.html
+++ b/index.html
@@ -54,16 +54,19 @@
     </div>
 
     <!-- JS imports -->
-    <!-- General -->
+    <!-- Game -->
 
     <script src="materials/script.js"></script>
     <script src="materials/scroller.js"></script>
 
+    <script src="materials/game/gameFoundations/globalFunctions.js"></script>
+
+    <script src="materials/game/gameFoundations/game.js"></script>
+    <script src="materials/game/gameFoundations/gameFunctions.js"></script>
+
     <script src="materials/game/env/env.js"></script>
     <script src="materials/game/env/initEnv.js"></script>
     <script src="materials/game/env/runEnv.js"></script>
-
-    <!-- Object functions -->
 
     <!-- Nueral Net -->
 
