Added pause instead of creating new game

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="uiContent">
 
-                <button class="button greenButton animate" data-show-value='0' onclick="initEnv()">
+                <button class="button greenButton animate" data-show-value='0' id="playButton" onclick="initEnv()">
                     <span class="material-icons">play_arrow</span>Play
                 </button>
 
