Added hotkeys for basic icons, added animated icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="materials/style.css">
 
+    <link rel="icon" href="materials/images/gameIcon.gif" type="image/png">
     <title>Augmentum</title>
 </head>
 
@@ -17,13 +18,13 @@
         <div class="uiChild animate floatUp" id="home">
 
             <h2 class="uiHeader gameHeader">
-                <img src="materials/images/gameIcon.png" alt="Game icon" class="gameIcon">
+                <img src="materials/images/gameIcon.gif" alt="Game icon" class="gameIcon">
                 Augmentum
             </h2>
 
             <div class="uiContent">
 
-                <button class="button greenButton animate" data-show-value='0' id="playButton" onclick="initEnv()">
+                <button class="button greenButton animate" data-show-value='0' id="playButton" onclick="initEnv()" tabindex="0">
                     <span class="material-icons">play_arrow</span>Play
                 </button>
 
