--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 
     </div>
 
+    <!-- Sprites -->
+
+    <img src="materials/game/images/apartment.png" class="hidden" id="apartment">
+
     <!-- JS imports -->
     <!-- Game -->
 
@@ -76,11 +80,14 @@
     <script src="materials/game/gameFoundations/globalFunctions.js"></script>
 
     <script src="materials/game/gameFoundations/game.js"></script>
-    <script src="materials/game/gameFoundations/gameFunctions.js"></script>
 
     <script src="materials/game/env/env.js"></script>
     <script src="materials/game/env/initEnv.js"></script>
     <script src="materials/game/env/runEnv.js"></script>
+
+    <script src="materials/game/gameFoundations/gameObject.js"></script>
+
+    <script src="materials/game/structures/structures.js"></script>
 
     <!-- Nueral Net -->
 
