Added buildpreview and redrawing of sprites

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
 
     <img src="materials/game/images/apartment.png" class="hidden" id="apartment">
 
+    <img src="materials/game/images/transparentApartment.png" class="hidden" id="transparentApartment">
+
     <!-- JS imports -->
     <!-- Game -->
 
