Added farm and money, organized images, added resourceParent

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 
     <div class="gameUI">
 
+        <div class="resourcesParent" id="resourcesParent">
+
+        </div>
+
         <button class="menuButton hidden animate" id='menuButton' onclick="toggleUI('menuButton', 'home')">
             <div class="menuDot"></div>
             <div class="menuDot"></div>
@@ -69,9 +73,9 @@
 
     <!-- Sprites -->
 
-    <img src="materials/game/images/apartment.png" class="hidden" id="apartment">
+    <img src="materials/images/apartment.png" class="hidden" id="apartment">
 
-    <img src="materials/game/images/transparentApartment.png" class="hidden" id="transparentApartment">
+    <img src="materials/images/transparentApartment.png" class="hidden" id="transparentApartment">
 
     <!-- JS imports -->
     <!-- Game -->
