--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             
         </div>
 
+        <div class="structuresParent" id='structuresParent'>
+
+        </div>
+
         <button class="menuButton hidden animate" id='menuButton' onclick="toggleUI('menuButton', 'home')">
             <div class="menuDot"></div>
             <div class="menuDot"></div>
