Added build preview and structure type selection

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
     <img src="materials/images/apartment.png" class="hidden" id="apartment">
 
-    <img src="materials/images/transparentApartment.png" class="hidden" id="transparentApartment">
+    <img src="materials/images/apartmentTransparent.png" class="hidden" id="apartmentTransparent">
+    <img src="materials/images/farmTransparent.png" class="hidden" id="farmTransparent">
 
     <!-- JS imports -->
     <!-- Game -->
