OPtimized and fixed bugs with structure placement and visualization

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <!-- Sprites -->
 
     <img src="materials/images/apartment.png" class="hidden" id="apartment">
+    <img src="materials/images/farm.png" class="hidden" id="farm">
 
     <img src="materials/images/apartmentTransparent.png" class="hidden" id="apartmentTransparent">
     <img src="materials/images/farmTransparent.png" class="hidden" id="farmTransparent">
