--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
 
     <img src="materials/images/apartment.png" class="hidden" id="apartment">
     <img src="materials/images/farm.png" class="hidden" id="farm">
-    <img src="materials/images/autocannon.png" class="hidden" id="farm">
+    <img src="materials/images/autocannon.png" class="hidden" id="autoCannon">
 
     <img src="materials/images/apartmentTransparent.png" class="hidden" id="apartmentTransparent">
     <img src="materials/images/farmTransparent.png" class="hidden" id="farmTransparent">
+    <img src="materials/images/autocannonTransparent.png" class="hidden" id="autoCannonTransparent">
 
     <!-- JS imports -->
     <!-- Game -->
