added ammo icon, implemented environmentalist

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
     <!-- Sprites -->
 
+    <img src="materials/images/environmentalist.png" class="hidden" id="environmentalist">
+
     <img src="materials/images/apartment.png" class="hidden" id="apartment">
     <img src="materials/images/farm.png" class="hidden" id="farm">
     <img src="materials/images/autocannon.png" class="hidden" id="autoCannon">
@@ -102,6 +104,8 @@
     <script src="materials/game/env/runEnv.js"></script>
 
     <script src="materials/game/gameFoundations/gameObject.js"></script>
+
+    <script src="materials/game/units/environmentalist.js"></script>
 
     <script src="materials/game/structures/structure.js"></script>
 
