Added human counter, fixed bugs

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 
         </div>
 
+
+        <div class="humanCount" id="humanCount">Humans: 0</div>
+
         <button class="menuButton hidden animate" id='menuButton' onclick="toggleUI('menuButton', 'home')">
             <div class="menuDot"></div>
             <div class="menuDot"></div>
