Fixed pause and un pause bugs

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <span class="material-icons">people</span>
             Humans: 0</div>
 
-        <button class="menuButton" id='menuButton'>
+        <button class="menuButton" id='menuButton' onclick="game.togglePause()">
             <div class="menuDot"></div>
             <div class="menuDot"></div>
             <div class="menuDot"></div>
