Added environmentalist damage, fixed their targeting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="uiContent">
 
                 <p class="uiText" id="gameDescription">
-                    Welcome to Augmentum! Your goal is to build a new company town in this land plot, using the workers to produce oil.
+                    Welcome to Augmentum! Your goal is to build a new company town on this land plot, using the workers to produce oil.
                     <br><br>
                     Sadly this will attract attention of environmentalists, who want to stop pollution and climate change. You'll need to create turrets and supply lines to defend your production.
                     <br><br>
